test: new display fixtures, update fixtures div/simple

--- a/fixtures/elements/div/simple/simple.answer.html
+++ b/fixtures/elements/div/simple/simple.answer.html
@@ -3,10 +3,14 @@ description: 和问题相等
 similarity: 100
 -->
 <style>
+  html {
+    font-size: 10px;
+  }
+
   div {
-    width: 100px;
+    width: 10rem;
     height: 100px;
-    background-color: red;
+    background-color: rgb(255, 0, 0);
   }
 </style>
 
