--- a/fixtures/elements/div/simple/simple.question.html
+++ b/fixtures/elements/div/simple/simple.question.html
@@ -6,7 +6,7 @@ similarity: 50
   div {
     width: 100px;
     height: 100px;
-    background-color: red;
+    background-color: rgb(255, 0, 0);
   }
 </style>
 
