fix: getDisplayRate using absolute coordinate

--- a/fixtures/css/zIndex/disorder1.answer.html
+++ b/fixtures/css/zIndex/disorder1.answer.html
@@ -4,6 +4,10 @@ similarity: 100
 -->
 
 <style>
+  body {
+    margin: 50px;
+  }
+
   div {
     position: absolute;
     width: 400px;
@@ -16,15 +20,15 @@ similarity: 100
   }
 
   div:nth-child(2) {
-    top: 100px;
-    left: 100px;
+    top: 150px;
+    left: 150px;
     z-index: 999; /* error */
     background-color: blue;
   }
 
   div:nth-child(3) {
-    top: 300px;
-    left: 300px;
+    top: 350px;
+    left: 350px;
     z-index: 2;
     background-color: green;
   }
