--- a/fixtures/css/zIndex/zIndex.question.html
+++ b/fixtures/css/zIndex/zIndex.question.html
@@ -3,6 +3,10 @@ description: absolute 定位重叠
 similarity: 100
 -->
 <style>
+  body {
+    margin: 50px;
+  }
+
   div {
     position: absolute;
     width: 400px;
@@ -15,13 +19,13 @@ similarity: 100
 
   div:nth-child(2) {
     background-color: blue;
-    top: 100px;
-    left: 100px;
+    top: 150px;
+    left: 150px;
   }
 
   div:nth-child(3) {
-    top: 300px;
-    left: 300px;
+    top: 350px;
+    left: 350px;
     background-color: green;
   }
 </style>
