test: test case

--- a/fixtures/elements/div/simple/simple.question.html
+++ b/fixtures/elements/div/simple/simple.question.html
@@ -1,6 +1,7 @@
 <!--
-description: 最简单的 div，只有宽高
-similarity: 50
+No: 001
+description: 创建一个长宽为 100px 的矩形，背景色红色(red)
+similarity: 100
 -->
 <style>
   div {
