--- a/fixtures/elements/div/simple/2_wrong.answer.html
+++ b/fixtures/elements/div/simple/2_wrong.answer.html
@@ -7,6 +7,8 @@ similarity: 50
     width: 50px;
     height: 50px;
     background-color: red;
+
+    /* 多余的属性 */
     color: rgb(0, 255, 0);
   }
 </style>
