--- a/fixtures/css/zIndex/1_correct.answer.html
+++ b/fixtures/css/zIndex/1_correct.answer.html
@@ -1,8 +1,7 @@
 <!--
-description: 第三个元素 z-index 999
-similarity: 100
+description: 和问题一致
+similarity: 98
 -->
-
 <style>
   body {
     margin: 50px;
@@ -23,14 +22,14 @@ similarity: 100
     top: 150px;
     left: 150px;
     z-index: 2;
-    background-color: blue;
+    background-color: green;
   }
 
   div:nth-child(3) {
     top: 350px;
     left: 350px;
-    z-index: 999; /* error */
-    background-color: green;
+    z-index: 3;
+    background-color: blue;
   }
 </style>
 
