--- a/fixtures/css/zIndex/3_disorder.answer.html
+++ b/fixtures/css/zIndex/3_disorder.answer.html
@@ -1,6 +1,6 @@
 <!--
-description: z-index 乱序
-similarity: 100
+description: 第二个元素位于顶层
+similarity: 60
 -->
 
 <style>
@@ -23,14 +23,14 @@ similarity: 100
     top: 150px;
     left: 150px;
     z-index: 999; /* error */
-    background-color: blue;
+    background-color: green;
   }
 
   div:nth-child(3) {
     top: 350px;
     left: 350px;
     z-index: 2;
-    background-color: green;
+    background-color: blue;
   }
 </style>
 
