--- a/fixtures/elements/div/simple/1_simple.answer.html
+++ b/fixtures/elements/div/simple/1_simple.answer.html
@@ -3,15 +3,15 @@ description: 和问题相等
 similarity: 100
 -->
 <style>
-  html {
-    font-size: 10px;
-  }
+html {
+  font-size: 10px;
+}
 
-  div {
-    width: 10rem;
-    height: 100px;
-    background-color: rgb(255, 0, 0);
-  }
+div {
+  width: 10rem;
+  height: 10rem;
+  background-color: rgb(255, 0, 0);
+}
 </style>
 
 <!-- splitter -->
