--- a/fixtures/complex-word/login-form/github-login.question.html
+++ b/fixtures/complex-word/login-form/github-login.question.html
@@ -1,89 +1,69 @@
 <!--
-description: github login form https://github.com/login 
+description: 模仿 github 的登录框 
 similarity: 50
 -->
 
 <style>
-  body {
-    background-color: #f9f9f9;
-  }
+body {
+  background-color: #f9f9f9;
+}
 
-  main {
-    margin-top: 106px;
-  }
+main {
+  margin-top: 106px;
+}
 
-  .login-form {
-    width: 340px;
-    margin: 0 auto;
+.login-form {
+  width: 340px;
+  margin: 0 auto;
+  border-radius: 5px;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #d8dee2;
+}
 
-    border-radius: 5px;
-    padding: 20px;
-    font-size: 14px;
-    background-color: #fff;
-    border: 1px solid #d8dee2;
-  }
+label {
+  display: block;
+  margin-bottom: 7px;
+  font-weight: 600;
+}
 
-  label {
-    display: block;
-    margin-bottom: 7px;
-    text-align: left;
-    font-weight: 600;
-  }
+input {
+  display: block;
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 6px 8px;
+  border: 1px solid #d1d5da;
+  border-radius: 3px;
+}
 
-  input {
-    display: block;
-    width: 100%;
-    margin-top: 5px;
-    margin-bottom: 15px;
-    font-size: 14px;
-    padding: 6px 8px;
-    font-size: 16px;
-    line-height: 20px;
-    color: #24292e;
-    background-color: #fff;
-    border: 1px solid #d1d5da;
-    border-radius: 3px;
-    outline: none;
-  }
+.label-link {
+  float: right;
+  font-size: 12px;
+  color: #0366d6;
+  text-decoration: none;
+}
 
-  .label-link {
-    float: right;
-    font-size: 12px;
-    color: #0366d6;
-    text-decoration: none;
-  }
-
-  .btn {
-    margin-top: 20px;
-    color: #fff;
-    background-color: #28a745;
-    position: relative;
-    padding: 6px 12px;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 20px;
-    cursor: pointer;
-    border-radius: .25em;
-  }
+.btn {
+  margin-top: 20px;
+  color: #fff;
+  background-color: #28a745;
+  font-size: 14px;
+  font-weight: 600;
+}
 </style>
 
 <!-- splitter -->
 
 <main>
-
-
   <div class="login-form">
-
     <label for="login_field" class="login-form-lable">
       Username or email address
     </label>
-    <input type="text" name="login_field" class="form-control input-block">
-
+    <input type="text" name="login_field">
     <label for="password" class="login-form-lable">
       Password <a class="label-link" href="/password_reset">Forgot password?</a>
     </label>
-    <input type="password" name="password" id="password" class="form-control form-control input-block">
-
+    <input type="password" name="password" id="password">
     <input type="submit" name="commit" value="Sign in" class="btn">
   </div>
 </main>
