--- a/fixtures/css/zIndex/2_disorder.answer.html
+++ b/fixtures/css/zIndex/2_disorder.answer.html
@@ -1,7 +1,8 @@
 <!--
-description: 添加了 z-index 属性
-similarity: 100
+description: 第一个元素位于顶层
+similarity: 60
 -->
+
 <style>
   body {
     margin: 50px;
@@ -14,22 +15,22 @@ similarity: 100
   }
 
   div:nth-child(1) {
-    z-index: 1;
+    z-index: 999; /* error */
     background-color: red;
   }
 
   div:nth-child(2) {
     top: 150px;
     left: 150px;
-    z-index: 2;
-    background-color: blue;
+    z-index: 1;
+    background-color: green;
   }
 
   div:nth-child(3) {
     top: 350px;
     left: 350px;
     z-index: 2;
-    background-color: green;
+    background-color: blue;
   }
 </style>
 
