--- a/fixtures/css/zIndex/zIndex.question.html
+++ b/fixtures/css/zIndex/zIndex.question.html
@@ -1,5 +1,5 @@
 <!--
-description: absolute 定位重叠
+description: absolute 定位，z-index 重叠
 similarity: 100
 -->
 <style>
@@ -18,15 +18,15 @@ similarity: 100
   }
 
   div:nth-child(2) {
-    background-color: blue;
-    top: 150px;
-    left: 150px;
+    top: 100px;
+    left: 100px;
+    background-color: green;
   }
 
   div:nth-child(3) {
-    top: 350px;
-    left: 350px;
-    background-color: green;
+    top: 300px;
+    left: 300px;
+    background-color: blue;
   }
 </style>
 
