test: udpate fixtures

--- a/fixtures/complex-word/search-bar/1_search-bar.answer.html
+++ b/fixtures/complex-word/search-bar/1_search-bar.answer.html
@@ -1,13 +1,13 @@
 <!--
-description: 搜索栏
-similarity: 100
+description: 简单的搜索栏
+similarity: 95
 -->
 <style>
   button
 
   /*,
-  button:focus,
-  button:hover */
+    button:focus,
+    button:hover */
     {
     /* outline: none; */
     border-style: none;
@@ -34,9 +34,9 @@ similarity: 100
   }
 
   /* input:focus {
-    border-color: #1890ff;
-    outline: 0;
-  } */
+      border-color: #1890ff;
+      outline: 0;
+    } */
 
   .search-result-list {
     position: absolute;
@@ -102,5 +102,4 @@ similarity: 100
 </div>
 
 <div class="mock">
-
 </div>
